applications/zot/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zot
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
