applications/zot/manifests/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zot-tailscale
  namespace: zot
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - zot
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zot-chart
                port:
                  number: 5000
