applications/zot/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zot
  namespace: zot
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - zot.mrcontainer.nl
      secretName: zot-tls
  rules:
    - host: zot.mrcontainer.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zot-chart
                port:
                  number: 5000
